Cyberduck
FTP, SFTP, WebDAV & Amazon S3 Browser for Mac OS X.
http://cyberduck.ch/

Changelog. Last modified: $Date$

3.2 [http://trac.cyberduck.ch/query?status=closed&milestone=3.1.3]
- [Feature] Choose Time Zone for bookmark (FTP) [#434]
- [Feature] IPv6 Interoperability with support for EPSV and EPRT commands (FTP) [#2539, #2885]
- [Feature] UTF8 charset negogiation (FTP) 
- [Feature] Support for hierarchical directory structure (Mosso)
- [Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [#2823]
- [Feature] Display date of transfer [#1462]
- [Bugfix] Update passwords in Keychain [#2984]
- [Bugfix] Invalid Origin parameter when creating CloudFront distribution (S3) [#3068]
- [Bugfix] Only reauthenticate when needed (Mosso) [#2876]
- [Bugfix] Improve Interoperability (WebDAV) [#2974, #3076]

3.1.2 [http://trac.cyberduck.ch/query?status=closed&milestone=3.1.2]
- [Feature] Enforce hostname verification (SSL)
- [Feature] Improved container listing performance (Mosso)
- [Feature] Updated bookmark icons (by Robert Curtis)
- [Bugfix] Fix Amazon CloudFront distribution configuration
- [Bugfix] Accept valid certificates without prompt if no explicit trust is given (SSL)
- [Bugfix] Files not downloaded recursively (S3)
- [Bugfix] Create and expand archives with space in filename [#2884]
- [Bugfix] Incorrect CDN URI for public containers (Mosso) [#2875]
- [Bugfix] Observe bandwidth setting for uploads (Mosso/WebDAV)

3.1.1 [http://trac.cyberduck.ch/query?status=closed&milestone=3.1.1]
- [Bugfix] Crash if no default login name is set in Preferences [#2852]
- [Bugfix] Upload incompatibility (WebDAV) [#2858]

3.1 [http://trac.cyberduck.ch/query?status=closed&milestone=3.1]
- [Feature] Amazon CloudFront Support (S3)
- [Feature] Cloud Files Support (Mosso) [#2745]
- [Feature] Pre-configured protocol settings for MobileMe iDisk (WebDAV)
- [Feature] Send arbitrary commands over SSH using the 'Send Command...' interface (SFTP) [#3]