@@ -17,7 +17,9 @@
     <ul>
         <li>[Feature] Choose Time Zone for bookmark (FTP) [<a href="http://trac.cyberduck.ch/ticket/434">#434</a>]</li>
         <li>[Feature] IPv6 Interoperability with support for EPSV and EPRT commands (FTP) [<a href="http://trac.cyberduck.ch/ticket/2539">#2539</a>, <a href="http://trac.cyberduck.ch/ticket/2539">#2885</a>]</li>
-        <li>[Feature] UTF8 charset negogiation (FTP)</li>
+        <li>[Feature] UTF8 charset negogiation [http://tools.ietf.org/html/draft-ietf-ftpext-utf-8-option-00] (FTP)</li>
+        <li>[Feature] Support for directory listings using MLSD [RFC 3659] (FTP)</li>
+        <li>[Feature] Support for Modification Time (MFMT) extension [http://tools.ietf.org/html/draft-somers-ftp-mfxx-04] (FTP)</li>
         <li>[Feature] Support for hierarchical directory structure (Mosso)</li>
         <li>[Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [<a href="http://trac.cyberduck.ch/ticket/2823">#2823</a>]</li>
         <li>[Feature] Display date of transfer [<a href="http://trac.cyberduck.ch/ticket/1462">#1462</a>]</li>
